# navigation/controllers/user_controller.rs
@@ -1,18 +1,18 @@
 use std::sync::Arc;
 
-use axum::extract::{Path, Query, State};
-use axum::http::StatusCode;
-use axum::response::IntoResponse;
-use axum::routing::get;
-use axum::{Json, Router};
-use tokio_postgres::Client;
-
-use services::user_service::UserService;
-
 use crate::app_state::AppState;
-use crate::controllers::{convert_error, convert_service_error, set_pagination_limit};
+use crate::controllers::{
+  convert_error, convert_service_error, map_accept_languages, map_language_header, set_pagination_limit,
+};
+use crate::extractors::headers::accept_language::AcceptLanguageHeader;
 use crate::extractors::query_pagination::QueryPagination;
-use crate::implementations::{get_image_repository, get_user_repository, get_user_service};
+use crate::implementations::{
+  get_book_character_repository, get_book_genre_repository, get_book_involved_repository, get_book_repository,
+  get_book_theme_repository, get_character_repository, get_franchise_repository, get_genre_repository,
+  get_image_repository, get_person_repository, get_role_repository, get_theme_repository, get_user_book_repository,
+  get_user_book_service, get_user_repository, get_user_service,
+};
+use crate::openapi::params::header::accept_language::AcceptLanguageParam;
 use crate::openapi::params::path::id::IdParam;
 use crate::openapi::params::path::name::NameParam;
 use crate::openapi::params::query::count::CountParam;
@@ -20,6 +20,14 @@ use crate::openapi::params::query::page::PageParam;
 use crate::openapi::responses::bad_request::BadRequest;
 use crate::openapi::responses::not_found::NotFound;
 use crate::openapi::responses::server_error::ServerError;
+use axum::extract::{Path, Query, State};
+use axum::http::StatusCode;
+use axum::response::IntoResponse;
+use axum::routing::get;
+use axum::{Json, Router};
+use services::user_service::user_book_service::UserBookService;
+use services::user_service::UserService;
+use tokio_postgres::Client;
 
 pub mod user_doc;
 
@@ -27,6 +35,8 @@ pub fn routes(app_state: AppState) -> Router {
   Router::new()
     .route("/", get(get_items))
     .route("/{id}", get(get_by_id))
+    .route("/{id}/books", get(get_books))
+    .route("/{id}/books/{book_id}", get(get_book_by_id))
     .route("/name/{name}", get(get_by_name))
     .with_state(app_state)
 }
@@ -100,9 +110,90 @@ async fn get_by_name(
     Err(error) => Err(convert_service_error(error)),
   }
 }
+#[utoipa::path(get, path = "/{id}/books",
+  responses(
+    (status = 200, description = "User books based on the user id", body = Vec < UserBook >), ServerError, BadRequest
+  ),
+  params(IdParam, AcceptLanguageParam),
+  tag = "Users"
+)]
+async fn get_books(
+  Path(id): Path<u32>,
+  AcceptLanguageHeader(languages): AcceptLanguageHeader,
+  State(app_state): State<AppState>,
+) -> impl IntoResponse {
+  let connection = app_state.pool.get().await.map_err(convert_error)?;
+  let service = get_book_service(&connection);
 
-fn get_service(connection: &Client) -> impl UserService + '_ {
-  let image_repository = Arc::new(get_image_repository(connection));
-  let repository = get_user_repository(connection, image_repository);
+  let languages = map_accept_languages(&languages);
+  let content_language = map_language_header(&languages);
+
+  println!("Route for books from a user with the id {} in {:?}", id, languages);
+
+  match service.get_by_user_id(id, &languages).await {
+    Ok(items) => Ok((StatusCode::OK, content_language, Json(items))),
+    Err(error) => Err(convert_service_error(error)),
+  }
+}
+#[utoipa::path(get, path = "/{id}/books/{book_id}",
+  responses(
+    (status = 200, description = "User book based on the user id and book id", body = Option<UserBook>), ServerError, BadRequest,NotFound
+  ),
+  params(IdParam, AcceptLanguageParam,("book_id" = u32, Path,)),
+  tag = "Users"
+)]
+async fn get_book_by_id(
+  Path((user_id, book_id)): Path<(u32, u32)>,
+  AcceptLanguageHeader(languages): AcceptLanguageHeader,
+  State(app_state): State<AppState>,
+) -> impl IntoResponse {
+  let connection = app_state.pool.get().await.map_err(convert_error)?;
+  let service = get_book_service(&connection);
+
+  let languages = map_accept_languages(&languages);
+  let content_language = map_language_header(&languages);
+
+  println!(
+    "Route for user book with the id {} from a user with the id {} in {:?}",
+    book_id, user_id, languages
+  );
+
+  match service.get_by_book_id(user_id, book_id, &languages).await {
+    Ok(item) => match item {
+      None => Ok((StatusCode::NOT_FOUND, content_language, Json(None))),
+      Some(item) => Ok((StatusCode::OK, content_language, Json(Some(item)))),
+    },
+    Err(error) => Err(convert_service_error(error)),
+  }
+}
+fn get_service(client: &Client) -> impl UserService + '_ {
+  let image_repository = Arc::new(get_image_repository(client));
+  let repository = get_user_repository(client, image_repository);
   get_user_service(Arc::new(repository))
+}
+
+pub fn get_book_service(client: &Client) -> impl UserBookService + '_ {
+  let image_repository = Arc::new(get_image_repository(client));
+  let franchise_repository = Arc::new(get_franchise_repository(client));
+  let genre_repository = Arc::new(get_genre_repository(client));
+  let theme_repository = Arc::new(get_theme_repository(client));
+  let role_repository = Arc::new(get_role_repository(client));
+  let person_repository = Arc::new(get_person_repository(client, image_repository.clone()));
+  let book_genre_repository = Arc::new(get_book_genre_repository(client, genre_repository));
+  let book_theme_repository = Arc::new(get_book_theme_repository(client, theme_repository));
+  let book_involved_repository = Arc::new(get_book_involved_repository(client, person_repository, role_repository));
+  let character_repository = Arc::new(get_character_repository(client, image_repository.clone()));
+  let book_character_repository = Arc::new(get_book_character_repository(client, character_repository));
+
+  let book_repository = Arc::new(get_book_repository(
+    client,
+    image_repository.clone(),
+    franchise_repository,
+    book_genre_repository,
+    book_theme_repository,
+    book_involved_repository,
+    book_character_repository,
+  ));
+  let repository = Arc::new(get_user_book_repository(client, book_repository));
+  get_user_book_service(repository)
 }
